@@ -8,20 +8,8 @@ LIBDIR=$FIRMROOT/lib/shared
 LIBS=$LIBDIR/lib
 INCLUDES=$LIBDIR/include
 
-if [ ! -f $APROOTDIR/configure ]; then
-    autoreconf -fi
-    sh ./autogen.sh --skip-gnulib
-fi
-
 HBUILD=`uname -m`-pc-linux-gnu
 HTARGET=mipsel-linux
-
-#arch options
-CONFOPTS="--host=$HTARGET --target=$HTARGET --build=$HBUILD"
-CONFOPTS="$CONFOPTS --prefix=$APROOTDIR/filesystem --disable-debug-mode --disable-dependency-tracking --disable-static"
-
-#this small workaround
-cp -f $APROOTDIR/inc/*.h $APROOTDIR/lib/
 
 CFLAGS="$BACKUPCFLAGS -I$INCLUDES"
 CPPFLAGS="$BACKUPCFLAGS -I$INCLUDES"
@@ -29,11 +17,27 @@ LDFLAGS="$BACKUPLDFLAGS -L$LIBS"
 
 export CFLAGS LDFLAGS CPPFLAGS
 
+if [ ! -f $APROOTDIR/configure ]; then
+    autoreconf -fi
+    sh ./autogen.sh --skip-gnulib
+fi
+
+CONFOPTS="--host=$HTARGET --target=$HTARGET --build=$HBUILD"
+CONFOPTS="$CONFOPTS --prefix=$APROOTDIR/filesystem --disable-debug-mode --disable-dependency-tracking --disable-static"
+
+#this small workaround
+cp -f $APROOTDIR/inc/*.h $APROOTDIR/lib/
 ./configure $CONFOPTS
 
 echo "=====================CONFIGURE-LIBCHARSET===================="
 cd $APROOTDIR/libcharset
 APROOTDIR=`pwd`
+
+CFLAGS="$BACKUPCFLAGS -I$INCLUDES"
+CPPFLAGS="$BACKUPCFLAGS -I$INCLUDES"
+LDFLAGS="$BACKUPLDFLAGS -L$LIBS"
+
+export CFLAGS LDFLAGS CPPFLAGS
 
 if [ ! -f $APROOTDIR/configure ]; then
     sh ./autogen.sh --skip-gnulib
@@ -44,13 +48,6 @@ if [ ! -f $APROOTDIR/Makefile.in ]; then
 fi
 
 CONFOPTS="--host=mipsel-linux --prefix=$APROOTDIR/filesystem"
-
-CFLAGS="$BACKUPCFLAGS -I$INCLUDES"
-CPPFLAGS="$BACKUPCFLAGS -I$INCLUDES"
-LDFLAGS="$BACKUPLDFLAGS -L$LIBS"
-
-export CFLAGS LDFLAGS CPPFLAGS
-
 ./configure $CONFOPTS
 
 cd ..
