@@ -3,6 +3,9 @@
 echo "=====================CONFIGURE-LIBNFNETLINK===================="
 APROOTDIR=`pwd`
 
+HBUILD=`uname -m`-pc-linux-gnu
+HTARGET=mipsel-linux
+
 if [ ! -f $APROOTDIR/configure ]; then
     libtoolize -c --force
     aclocal
@@ -14,12 +17,7 @@ if [ ! -f $APROOTDIR/Makefile.in ]; then
     automake --foreign
 fi
 
-HBUILD=`uname -m`-pc-linux-gnu
-HTARGET=mipsel-linux
-
-#arch options
 CONFOPTS="--host=$HTARGET --target=$HTARGET --build=$HBUILD"
-
 CONFOPTS="$CONFOPTS --prefix=$APROOTDIR/filesystem \
 	  --disable-dependency-tracking --enable-shared --disable-static \
 	  CFLAGS=-D__linux__ libnet_cv_have_packet_socket=y"
