@@ -8,6 +8,15 @@ LIBDIR=$FIRMROOT/lib/shared
 LIBS=$LIBDIR/lib
 INCLUDES=$LIBDIR/include
 
+HBUILD=`uname -m`-pc-linux-gnu
+HTARGET=mipsel-linux
+
+CFLAGS="$BACKUPCFLAGS -I$INCLUDES"
+CPPFLAGS="$BACKUPCFLAGS -I$INCLUDES"
+LDFLAGS="$BACKUPLDFLAGS -L$LIBS"
+
+export CFLAGS LDFLAGS CPPFLAGS
+
 if [ ! -f $APROOTDIR/configure ]; then
     autoreconf -fi
     autoconf
@@ -16,18 +25,9 @@ if [ ! -f $APROOTDIR/Makefile.in ]; then
     cp -f $APROOTDIR/Makefile.in.tmpl $APROOTDIR/Makefile.in
 fi
 
-HBUILD=`uname -m`-pc-linux-gnu
-HTARGET=mipsel-linux
-
 CONFOPTS="--host=$HTARGET --target=$HTARGET --build=$HBUILD"
 CONFOPTS="$CONFOPTS --enable-shared --enable-ipv6 --with-pcap=linux"
 CONFOPTS="$CONFOPTS --disable-bluetooth --disable-canusb --disable-can --without-flex --without-bison --without-libnl"
 CONFOPTS="$CONFOPTS --prefix=$APROOTDIR/filesystem"
-
-CFLAGS="$BACKUPCFLAGS -I$INCLUDES"
-CPPFLAGS="$BACKUPCFLAGS -I$INCLUDES"
-LDFLAGS="$BACKUPLDFLAGS -L$LIBS"
-
-export CFLAGS LDFLAGS CPPFLAGS
 
 ./configure $CONFOPTS
