@@ -3,6 +3,9 @@
 echo "==================CONFIGURE-IPTABLES=============================="
 APROOTDIR=`pwd`
 
+HBUILD=`uname -m`-pc-linux-gnu
+HTARGET=mipsel-linux
+
 if [ ! -f $APROOTDIR/configure ]; then
     aclocal
     autoreconf -fi
@@ -13,10 +16,6 @@ if [ ! -f $APROOTDIR/Makefile.in ]; then
     automake
 fi
 
-HBUILD=`uname -m`-pc-linux-gnu
-HTARGET=mipsel-linux
-
-#arch options
 CONFOPTS="--host=$HTARGET --target=$HTARGET --build=$HBUILD"
 CONFOPTS="$CONFOPTS --prefix=$APROOTDIR/filesystem --disable-dependency-tracking --enable-static --disable-shared \
 		--with-xtlibdir=/lib --enable-ipv6"
