@@ -3,6 +3,9 @@
 echo "==================CONFIGURE-IRQBALANCE==============================="
 APROOTDIR=`pwd`
 
+HBUILD=`uname -m`-pc-linux-gnu
+HTARGET=mipsel-linux
+
 if [ ! -f $APROOTDIR/Makefile.in ]; then
     ./autogen.sh
 fi
@@ -11,10 +14,6 @@ if [ ! -f $APROOTDIR/configure ]; then
     autoconf
 fi
 
-HBUILD=`uname -m`-pc-linux-gnu
-HTARGET=mipsel-linux
-
-#arch options
 CONFOPTS="--host=$HTARGET --target=$HTARGET --build=$HBUILD"
 CONFOPTS="$CONFOPTS --host=$HTARGET --target=$HTARGET --build=$HBUILD"
 
