@@ -3,6 +3,9 @@
 echo "==================CONFIGURE-TCPDUMP=============================="
 APROOTDIR=`pwd`
 
+HBUILD=`uname -m`-pc-linux-gnu
+HTARGET=mipsel-linux
+
 if [ ! -f $APROOTDIR/configure ]; then
     aclocal
     autoconf
@@ -11,12 +14,7 @@ if [ ! -f $APROOTDIR/Makefile.in ]; then
     cp -f $APROOTDIR/Makefile.in.tmpl $APROOTDIR/Makefile.in
 fi
 
-HBUILD=`uname -m`-pc-linux-gnu
-HTARGET=mipsel-linux
-
-#arch options
 CONFOPTS="--host=$HTARGET --target=$HTARGET --build=$HBUILD"
-
 CONFOPTS="$CONFOPTS --prefix=$APROOTDIR/filesystem"
 CONFOPTS="$CONFOPTS --enable-ipv6"
 CONFOPTS="$CONFOPTS --disable-smb"
