@@ -755,6 +755,10 @@
 23) kernel: net: fix high overhead of vlan sub-device teardown.<br>
 <br>
 <br>
+<b>2.7.x</b><br>
+1) build_system: small rework DoConfigure.sh scripts.<br>
+<br>
+<br>
 <b>TODO:</b><br>
 1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
 2) full russian ui (need help community or employ the web developer).<br>
